[gd_scene load_steps=7 format=2]

[ext_resource path="res://autoloads/Diagnostics.gd" type="Script" id=1]
[ext_resource path="res://fonts/new_fonts/roboto_black_15.tres" type="DynamicFont" id=2]
[ext_resource path="res://default_theme_tools.tres" type="Theme" id=3]
[ext_resource path="res://autoloads/gamepad_visualizer/GamepadVisualizer.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Roboto-Black.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Version Label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_right = 120.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="Panel" parent="."]
margin_left = 345.0
margin_top = 163.0
margin_right = 1105.0
margin_bottom = 583.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="MarginContainer" parent="WindowDialog/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/TabContainer/Game"]
margin_right = 750.0
margin_bottom = 383.0

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/TabContainer/Game/VBoxContainer"]
margin_right = 750.0
margin_bottom = 228.0

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer"]
margin_right = 750.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FrameRateLabel" type="Label" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 750.0
margin_bottom = 25.0
text = "FPS:"

[node name="AVGFrameRateLabel" type="Label" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 750.0
margin_bottom = 54.0
text = "Avg:"

[node name="MinFrameRateLabel" type="Label" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 750.0
margin_bottom = 83.0
text = "Min:"

[node name="MaxFrameRateLabel" type="Label" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 750.0
margin_bottom = 112.0
text = "Max:"

[node name="ResetButton" type="Button" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 750.0
margin_bottom = 141.0
text = "Reset"

[node name="OpenStrayNodeTester" type="Button" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 750.0
margin_bottom = 170.0
text = "Open Stray Node Test Scene"

[node name="PrintOrphanedNodesButton" type="Button" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 750.0
margin_bottom = 199.0
text = "Print Stray Nodes"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 750.0
margin_bottom = 228.0

[node name="InstanceID" type="SpinBox" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 25.0
max_value = 9.22337e+18

[node name="PropertyName" type="LineEdit" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 116.0
margin_bottom = 25.0

[node name="PrintPropertyValue" type="Button" parent="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 750.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Print property"

[node name="HSeparator" type="HSeparator" parent="WindowDialog/TabContainer/Game/VBoxContainer"]
margin_top = 232.0
margin_right = 750.0
margin_bottom = 236.0

[node name="AutoplayCheckbox" type="CheckBox" parent="WindowDialog/TabContainer/Game/VBoxContainer"]
margin_top = 240.0
margin_right = 750.0
margin_bottom = 265.0
focus_mode = 0
text = "Enable autoplay"

[node name="Service" type="MarginContainer" parent="WindowDialog/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/TabContainer/Service"]
margin_right = 750.0
margin_bottom = 383.0

[node name="Button" type="Button" parent="WindowDialog/TabContainer/Service/VBoxContainer"]
margin_right = 750.0
margin_bottom = 25.0
text = "Clear achievment..."

[node name="Button2" type="Button" parent="WindowDialog/TabContainer/Service/VBoxContainer"]
margin_top = 29.0
margin_right = 750.0
margin_bottom = 54.0
text = "Obtain achivement"

[node name="Button3" type="Button" parent="WindowDialog/TabContainer/Service/VBoxContainer"]
margin_top = 58.0
margin_right = 750.0
margin_bottom = 83.0
text = "Set achievment progress"

[node name="Logs" type="MarginContainer" parent="WindowDialog/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/TabContainer/Logs"]
margin_right = 750.0
margin_bottom = 383.0

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/TabContainer/Logs/VBoxContainer"]
margin_right = 750.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="WindowDialog/TabContainer/Logs/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 25.0
text = "Filter by:"

[node name="LogFilterOptionButton" type="OptionButton" parent="WindowDialog/TabContainer/Logs/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 107.0
margin_bottom = 25.0
text = "All"
items = [ "All", null, false, 0, null ]
selected = 0

[node name="Label2" type="Label" parent="WindowDialog/TabContainer/Logs/VBoxContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 176.0
margin_bottom = 25.0
text = "Log level:"

[node name="LogLevelFilterOptionButton" type="OptionButton" parent="WindowDialog/TabContainer/Logs/VBoxContainer/HBoxContainer"]
margin_left = 180.0
margin_right = 253.0
margin_bottom = 25.0
text = "ERROR"
items = [ "INFO", null, false, 0, null, "WARN", null, false, 1, null, "ERROR", null, false, 2, null ]
selected = 2

[node name="ScrollContainer" type="ScrollContainer" parent="WindowDialog/TabContainer/Logs/VBoxContainer"]
margin_top = 29.0
margin_right = 750.0
margin_bottom = 383.0
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog/TabContainer/Logs/VBoxContainer/ScrollContainer"]
margin_right = 750.0
margin_bottom = 354.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
selection_enabled = true

[node name="Network" type="MarginContainer" parent="WindowDialog/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/TabContainer/Network"]
margin_right = 750.0
margin_bottom = 383.0

[node name="AuthTokenButton" type="Button" parent="WindowDialog/TabContainer/Network/VBoxContainer"]
margin_right = 750.0
margin_bottom = 25.0
text = "Copy auth token"

[node name="HSplitContainer" type="HSplitContainer" parent="WindowDialog/TabContainer/Network/VBoxContainer"]
margin_top = 29.0
margin_right = 750.0
margin_bottom = 383.0
size_flags_vertical = 3
split_offset = 371

[node name="Tree" type="Tree" parent="WindowDialog/TabContainer/Network/VBoxContainer/HSplitContainer"]
margin_right = 372.0
margin_bottom = 354.0

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog/TabContainer/Network/VBoxContainer/HSplitContainer"]
margin_left = 380.0
margin_right = 750.0
margin_bottom = 354.0
focus_mode = 2
selection_enabled = true

[node name="FPSLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "FPS: 15"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamepadVisualizer" parent="." instance=ExtResource( 4 )]
margin_left = 1.18921
margin_right = 1.18921

[connection signal="pressed" from="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer/OpenStrayNodeTester" to="." method="_on_OpenStrayNodeTester_pressed"]
[connection signal="pressed" from="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer/PrintOrphanedNodesButton" to="." method="_on_PrintOrphanedNodesButton_pressed"]
[connection signal="pressed" from="WindowDialog/TabContainer/Game/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/PrintPropertyValue" to="." method="_on_PrintPropertyValue_pressed"]
[connection signal="item_selected" from="WindowDialog/TabContainer/Logs/VBoxContainer/HBoxContainer/LogFilterOptionButton" to="." method="_on_LogFilterOptionButton_item_selected"]
[connection signal="item_selected" from="WindowDialog/TabContainer/Logs/VBoxContainer/HBoxContainer/LogLevelFilterOptionButton" to="." method="_on_LogFilterOptionButton_item_selected"]
